--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,8 +7,8 @@ name: Docker
 
 on:
   push:
-    branches: [ "main" ]
-   
+    branches: [ "main", "unprivileged" ]
+
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
